--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,3 +11,15 @@ h1 {
 .download {
   color: aquamarine; font-size: 16px
 }
+
+h2 {
+  font-weight:3300; font-size: 42px; color: white;
+}
+
+p {
+  font-size: 21px; color: gray;
+}
+
+.copyright {
+  text-align: right; color: gray
+}
